--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,12 +3,14 @@
 buildscript {
     repositories {
         jcenter()
+        maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.1'
+        classpath 'com.android.tools.build:gradle:2.2.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath 'io.fabric.tools:gradle:1.+'
     }
 }
 
@@ -16,6 +18,7 @@ allprojects {
     repositories {
         mavenLocal()
         jcenter()
+        maven { url 'https://maven.fabric.io/public' }
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
